docs/api/qiskit/0.24/qiskit.aqua.QuantumInstance.mdx
---
title: QuantumInstance
description: API reference for qiskit.aqua.QuantumInstance
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.QuantumInstance
---

<span id="qiskit-aqua-quantuminstance" />

# qiskit.aqua.QuantumInstance

<Class id="qiskit.aqua.QuantumInstance" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/quantum_instance.py" signature="QuantumInstance(backend, shots=1024, seed_simulator=None, max_credits=10, basis_gates=None, coupling_map=None, initial_layout=None, pass_manager=None, seed_transpiler=None, optimization_level=None, backend_options=None, noise_model=None, timeout=None, wait=5.0, skip_qobj_validation=True, measurement_error_mitigation_cls=None, cals_matrix_refresh_period=30, measurement_error_mitigation_shots=None, job_callback=None)" modifiers="class">
  Quantum Backend including execution setting.

  Quantum Instance holds a Qiskit Terra backend as well as configuration for circuit transpilation and execution. When provided to an Aqua algorithm the algorithm will execute the circuits it needs to run using the instance.

  **Parameters**

  *   **backend** (`BaseBackend`) – Instance of selected backend
  *   **shots** (`int`) – Number of repetitions of each circuit, for sampling
  *   **seed\_simulator** (`Optional`\[`int`]) – Random seed for simulators
  *   **max\_credits** (`int`) – Maximum credits to use
  *   **basis\_gates** (`Optional`\[`List`\[`str`]]) – List of basis gate names supported by the target. Defaults to basis gates of the backend.
  *   **coupling\_map** (`Union`\[`CouplingMap`, `List`\[`List`], `None`]) – Coupling map (perhaps custom) to target in mapping
  *   **initial\_layout** (`Union`\[`Layout`, `Dict`, `List`, `None`]) – Initial layout of qubits in mapping
  *   **pass\_manager** (`Optional`\[`PassManager`]) – Pass manager to handle how to compile the circuits
  *   **seed\_transpiler** (`Optional`\[`int`]) – The random seed for circuit mapper
  *   **optimization\_level** (`Optional`\[`int`]) – How much optimization to perform on the circuits. Higher levels generate more optimized circuits, at the expense of longer transpilation time.
  *   **backend\_options** (`Optional`\[`Dict`]) – All running options for backend, please refer to the provider of the backend for information as to what options it supports.
  *   **noise\_model** (`Optional`\[`NoiseModel`]) – noise model for simulator
  *   **timeout** (`Optional`\[`float`]) – Seconds to wait for job. If None, wait indefinitely.
  *   **wait** (`float`) – Seconds between queries for job result
  *   **skip\_qobj\_validation** (`bool`) – Bypass Qobj validation to decrease circuit processing time during submission to backend.
  *   **measurement\_error\_mitigation\_cls** (`Optional`\[`Callable`]) – The approach to mitigate measurement errors. Qiskit Ignis provides fitter classes for this functionality and CompleteMeasFitter from qiskit.ignis.mitigation.measurement module can be used here. (TensoredMeasFitter is not supported).
  *   **cals\_matrix\_refresh\_period** (`int`) – How often to refresh the calibration matrix in measurement mitigation. in minutes
  *   **measurement\_error\_mitigation\_shots** (`Optional`\[`int`]) – The number of shots number for building calibration matrix. If None, the main shots parameter value is used.
  *   **job\_callback** (`Optional`\[`Callable`]) – Optional user supplied callback which can be used to monitor job progress as jobs are submitted for processing by an Aqua algorithm. The callback is provided the following arguments: job\_id, job\_status, queue\_position, job

  **Raises**

  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – the shots exceeds the maximum number of shots
  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set noise model but the backend does not support that
  *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set backend\_options but the backend does not support that

  ### \_\_init\_\_

  <Function id="qiskit.aqua.QuantumInstance.__init__" signature="__init__(backend, shots=1024, seed_simulator=None, max_credits=10, basis_gates=None, coupling_map=None, initial_layout=None, pass_manager=None, seed_transpiler=None, optimization_level=None, backend_options=None, noise_model=None, timeout=None, wait=5.0, skip_qobj_validation=True, measurement_error_mitigation_cls=None, cals_matrix_refresh_period=30, measurement_error_mitigation_shots=None, job_callback=None)">
    Quantum Instance holds a Qiskit Terra backend as well as configuration for circuit transpilation and execution. When provided to an Aqua algorithm the algorithm will execute the circuits it needs to run using the instance.

    **Parameters**

    *   **backend** (`BaseBackend`) – Instance of selected backend
    *   **shots** (`int`) – Number of repetitions of each circuit, for sampling
    *   **seed\_simulator** (`Optional`\[`int`]) – Random seed for simulators
    *   **max\_credits** (`int`) – Maximum credits to use
    *   **basis\_gates** (`Optional`\[`List`\[`str`]]) – List of basis gate names supported by the target. Defaults to basis gates of the backend.
    *   **coupling\_map** (`Union`\[`CouplingMap`, `List`\[`List`], `None`]) – Coupling map (perhaps custom) to target in mapping
    *   **initial\_layout** (`Union`\[`Layout`, `Dict`, `List`, `None`]) – Initial layout of qubits in mapping
    *   **pass\_manager** (`Optional`\[`PassManager`]) – Pass manager to handle how to compile the circuits
    *   **seed\_transpiler** (`Optional`\[`int`]) – The random seed for circuit mapper
    *   **optimization\_level** (`Optional`\[`int`]) – How much optimization to perform on the circuits. Higher levels generate more optimized circuits, at the expense of longer transpilation time.
    *   **backend\_options** (`Optional`\[`Dict`]) – All running options for backend, please refer to the provider of the backend for information as to what options it supports.
    *   **noise\_model** (`Optional`\[`NoiseModel`]) – noise model for simulator
    *   **timeout** (`Optional`\[`float`]) – Seconds to wait for job. If None, wait indefinitely.
    *   **wait** (`float`) – Seconds between queries for job result
    *   **skip\_qobj\_validation** (`bool`) – Bypass Qobj validation to decrease circuit processing time during submission to backend.
    *   **measurement\_error\_mitigation\_cls** (`Optional`\[`Callable`]) – The approach to mitigate measurement errors. Qiskit Ignis provides fitter classes for this functionality and CompleteMeasFitter from qiskit.ignis.mitigation.measurement module can be used here. (TensoredMeasFitter is not supported).
    *   **cals\_matrix\_refresh\_period** (`int`) – How often to refresh the calibration matrix in measurement mitigation. in minutes
    *   **measurement\_error\_mitigation\_shots** (`Optional`\[`int`]) – The number of shots number for building calibration matrix. If None, the main shots parameter value is used.
    *   **job\_callback** (`Optional`\[`Callable`]) – Optional user supplied callback which can be used to monitor job progress as jobs are submitted for processing by an Aqua algorithm. The callback is provided the following arguments: job\_id, job\_status, queue\_position, job

    **Raises**

    *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – the shots exceeds the maximum number of shots
    *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set noise model but the backend does not support that
    *   [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – set backend\_options but the backend does not support that
  </Function>

  ## Methods

  |                                                                                                                                                             |                                                                                                                 |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.QuantumInstance.__init__ "qiskit.aqua.QuantumInstance.__init__")(backend\[, shots, seed\_simulator, …])                           | Quantum Instance holds a Qiskit Terra backend as well as configuration for circuit transpilation and execution. |
  | [`assemble`](#qiskit.aqua.QuantumInstance.assemble "qiskit.aqua.QuantumInstance.assemble")(circuits)                                                        | assemble circuits                                                                                               |
  | [`cals_matrix`](#qiskit.aqua.QuantumInstance.cals_matrix "qiskit.aqua.QuantumInstance.cals_matrix")(\[qubit\_index])                                        | Get the stored calibration matrices and its timestamp.                                                          |
  | [`execute`](#qiskit.aqua.QuantumInstance.execute "qiskit.aqua.QuantumInstance.execute")(circuits\[, had\_transpiled])                                       | A wrapper to interface with quantum backend.                                                                    |
  | [`maybe_refresh_cals_matrix`](#qiskit.aqua.QuantumInstance.maybe_refresh_cals_matrix "qiskit.aqua.QuantumInstance.maybe_refresh_cals_matrix")(\[timestamp]) | Calculate the time difference from the query of last time.                                                      |
  | [`set_config`](#qiskit.aqua.QuantumInstance.set_config "qiskit.aqua.QuantumInstance.set_config")(\*\*kwargs)                                                | Set configurations for the quantum instance.                                                                    |
  | [`transpile`](#qiskit.aqua.QuantumInstance.transpile "qiskit.aqua.QuantumInstance.transpile")(circuits)                                                     | A wrapper to transpile circuits to allow algorithm access the transpiled circuits.                              |

  ## Attributes

  |                                                                                                                                                                          |                                                         |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------- |
  | [`backend`](#qiskit.aqua.QuantumInstance.backend "qiskit.aqua.QuantumInstance.backend")                                                                                  | Return BaseBackend backend object.                      |
  | [`backend_config`](#qiskit.aqua.QuantumInstance.backend_config "qiskit.aqua.QuantumInstance.backend_config")                                                             | Getter of backend\_config.                              |
  | [`backend_name`](#qiskit.aqua.QuantumInstance.backend_name "qiskit.aqua.QuantumInstance.backend_name")                                                                   | Return backend name.                                    |
  | [`backend_options`](#qiskit.aqua.QuantumInstance.backend_options "qiskit.aqua.QuantumInstance.backend_options")                                                          | Getter of backend\_options.                             |
  | [`cals_matrix_refresh_period`](#qiskit.aqua.QuantumInstance.cals_matrix_refresh_period "qiskit.aqua.QuantumInstance.cals_matrix_refresh_period")                         | returns matrix refresh period                           |
  | [`circuit_summary`](#qiskit.aqua.QuantumInstance.circuit_summary "qiskit.aqua.QuantumInstance.circuit_summary")                                                          | Getter of circuit summary.                              |
  | [`compile_config`](#qiskit.aqua.QuantumInstance.compile_config "qiskit.aqua.QuantumInstance.compile_config")                                                             | Getter of compile\_config.                              |
  | [`is_local`](#qiskit.aqua.QuantumInstance.is_local "qiskit.aqua.QuantumInstance.is_local")                                                                               | Return True if backend is a local backend.              |
  | [`is_simulator`](#qiskit.aqua.QuantumInstance.is_simulator "qiskit.aqua.QuantumInstance.is_simulator")                                                                   | Return True if backend is a simulator.                  |
  | [`is_statevector`](#qiskit.aqua.QuantumInstance.is_statevector "qiskit.aqua.QuantumInstance.is_statevector")                                                             | Return True if backend is a statevector-type simulator. |
  | [`measurement_error_mitigation_cls`](#qiskit.aqua.QuantumInstance.measurement_error_mitigation_cls "qiskit.aqua.QuantumInstance.measurement_error_mitigation_cls")       | returns measurement error mitigation cls                |
  | [`measurement_error_mitigation_shots`](#qiskit.aqua.QuantumInstance.measurement_error_mitigation_shots "qiskit.aqua.QuantumInstance.measurement_error_mitigation_shots") | returns measurement error mitigation shots              |
  | [`noise_config`](#qiskit.aqua.QuantumInstance.noise_config "qiskit.aqua.QuantumInstance.noise_config")                                                                   | Getter of noise\_config.                                |
  | [`qjob_config`](#qiskit.aqua.QuantumInstance.qjob_config "qiskit.aqua.QuantumInstance.qjob_config")                                                                      | Getter of qjob\_config.                                 |
  | [`run_config`](#qiskit.aqua.QuantumInstance.run_config "qiskit.aqua.QuantumInstance.run_config")                                                                         | Getter of run\_config.                                  |
  | [`skip_qobj_validation`](#qiskit.aqua.QuantumInstance.skip_qobj_validation "qiskit.aqua.QuantumInstance.skip_qobj_validation")                                           | checks if skip qobj validation                          |

  ## Members list

  ### assemble

  <Function id="qiskit.aqua.QuantumInstance.assemble" signature="assemble(circuits)">
    assemble circuits

    **Return type**

    [`Qobj`](qiskit.qobj.Qobj "qiskit.qobj.Qobj")
  </Function>

  ### backend

  <Attribute id="qiskit.aqua.QuantumInstance.backend">
    Return BaseBackend backend object.
  </Attribute>

  ### backend\_config

  <Attribute id="qiskit.aqua.QuantumInstance.backend_config">
    Getter of backend\_config.
  </Attribute>

  ### backend\_name

  <Attribute id="qiskit.aqua.QuantumInstance.backend_name">
    Return backend name.
  </Attribute>

  ### backend\_options

  <Attribute id="qiskit.aqua.QuantumInstance.backend_options">
    Getter of backend\_options.
  </Attribute>

  ### cals\_matrix

  <Function id="qiskit.aqua.QuantumInstance.cals_matrix" signature="cals_matrix(qubit_index=None)">
    Get the stored calibration matrices and its timestamp.

    **Parameters**

    *   **qubit\_index** (*list\[int]*) – the qubit index of corresponding calibration matrix.
    *   **None** (*If*) –
    *   **all stored calibration matrices.** (*return*) –

    **Returns**

    **the calibration matrix and the creation timestamp if qubit\_index**

    is not None otherwise, return all matrices and their timestamp in a dictionary.

    **Return type**

    tuple(np.ndarray, int)
  </Function>

  ### cals\_matrix\_refresh\_period

  <Attribute id="qiskit.aqua.QuantumInstance.cals_matrix_refresh_period">
    returns matrix refresh period
  </Attribute>

  ### circuit\_summary

  <Attribute id="qiskit.aqua.QuantumInstance.circuit_summary">
    Getter of circuit summary.
  </Attribute>

  ### compile\_config

  <Attribute id="qiskit.aqua.QuantumInstance.compile_config">
    Getter of compile\_config.
  </Attribute>

  ### execute

  <Function id="qiskit.aqua.QuantumInstance.execute" signature="execute(circuits, had_transpiled=False)">
    A wrapper to interface with quantum backend.

    **Parameters**

    *   **circuits** (`Union`\[`QuantumCircuit`, `List`\[`QuantumCircuit`]]) – circuits to execute
    *   **had\_transpiled** (`bool`) – whether or not circuits had been transpiled

    **Return type**

    [`Qobj`](qiskit.qobj.Qobj "qiskit.qobj.Qobj")

    **Returns**

    Result object

    **TODO: Maybe we can combine the circuits for the main ones and calibration circuits before**

    assembling to the qobj.
  </Function>

  ### is\_local

  <Attribute id="qiskit.aqua.QuantumInstance.is_local">
    Return True if backend is a local backend.
  </Attribute>

  ### is\_simulator

  <Attribute id="qiskit.aqua.QuantumInstance.is_simulator">
    Return True if backend is a simulator.
  </Attribute>

  ### is\_statevector

  <Attribute id="qiskit.aqua.QuantumInstance.is_statevector">
    Return True if backend is a statevector-type simulator.
  </Attribute>

  ### maybe\_refresh\_cals\_matrix

  <Function id="qiskit.aqua.QuantumInstance.maybe_refresh_cals_matrix" signature="maybe_refresh_cals_matrix(timestamp=None)">
    Calculate the time difference from the query of last time.

    **Returns**

    whether or not refresh the cals\_matrix

    **Return type**

    bool
  </Function>

  ### measurement\_error\_mitigation\_cls

  <Attribute id="qiskit.aqua.QuantumInstance.measurement_error_mitigation_cls">
    returns measurement error mitigation cls
  </Attribute>

  ### measurement\_error\_mitigation\_shots

  <Attribute id="qiskit.aqua.QuantumInstance.measurement_error_mitigation_shots">
    returns measurement error mitigation shots
  </Attribute>

  ### noise\_config

  <Attribute id="qiskit.aqua.QuantumInstance.noise_config">
    Getter of noise\_config.
  </Attribute>

  ### qjob\_config

  <Attribute id="qiskit.aqua.QuantumInstance.qjob_config">
    Getter of qjob\_config.
  </Attribute>

  ### run\_config

  <Attribute id="qiskit.aqua.QuantumInstance.run_config">
    Getter of run\_config.
  </Attribute>

  ### set\_config

  <Function id="qiskit.aqua.QuantumInstance.set_config" signature="set_config(**kwargs)">
    Set configurations for the quantum instance.
  </Function>

  ### skip\_qobj\_validation

  <Attribute id="qiskit.aqua.QuantumInstance.skip_qobj_validation">
    checks if skip qobj validation
  </Attribute>

  ### transpile

  <Function id="qiskit.aqua.QuantumInstance.transpile" signature="transpile(circuits)">
    A wrapper to transpile circuits to allow algorithm access the transpiled circuits. :type circuits: `Union`\[`QuantumCircuit`, `List`\[`QuantumCircuit`]] :param circuits: circuits to transpile

    **Return type**

    `List`\[`QuantumCircuit`]

    **Returns**

    The transpiled circuits, it is always a list even though the length is one.
  </Function>
</Class>

